# turing-bot

./: .dockerignore  .gitignore  AUTHORS  LICENSE  README.md
mathrace_interaction/: .gitignore  README.md  pyproject.toml
mathrace_interaction/data/: fix_phiquadro_journals.sh
mathrace_interaction/data/2013/: disfida.journal  disfida.score
mathrace_interaction/data/2014/: disfida.journal  disfida.score  kangourou.journal  kangourou.score
mathrace_interaction/data/2015/: disfida.journal  disfida.score  kangourou.journal  kangourou.score
mathrace_interaction/data/2016/: disfida.journal  disfida.score  kangourou.journal  kangourou.score
mathrace_interaction/data/2017/: disfida.journal  disfida.score
mathrace_interaction/data/2018/: disfida.journal  disfida.score
mathrace_interaction/data/2019/: cesenatico_finale.json  cesenatico_finale_femminile_formato_extracted.journal  cesenatico_finale_femminile_formato_journal.journal  cesenatico_finale_femminile_formato_journal.score  cesenatico_finale_formato_extracted.journal  cesenatico_finale_formato_extracted.score  cesenatico_finale_formato_extracted_nomi_squadra.journal  cesenatico_finale_formato_journal.journal  cesenatico_finale_formato_journal.score  cesenatico_semifinale_A.journal  cesenatico_semifinale_A.score  cesenatico_semifinale_B.journal  cesenatico_semifinale_B.score  cesenatico_semifinale_C.journal  cesenatico_semifinale_C.score  cesenatico_semifinale_D.journal  cesenatico_semifinale_D.score  disfida.journal  disfida.score
mathrace_interaction/data/2020/: cesenatico_finale.journal  cesenatico_finale.score  cesenatico_finale_femminile.journal  cesenatico_finale_femminile.score  cesenatico_semifinale_A.journal  cesenatico_semifinale_A.score  cesenatico_semifinale_B.journal  cesenatico_semifinale_B.score  cesenatico_semifinale_C.journal  cesenatico_semifinale_C.score  cesenatico_semifinale_D.journal  cesenatico_semifinale_D.score  disfida.journal  disfida.score  torino_pubblico.json  torino_pubblico.score
mathrace_interaction/data/2021/: cesenatico_finale.journal  cesenatico_finale.score  cesenatico_finale_femminile.journal  cesenatico_finale_femminile.score  cesenatico_semifinale_A.journal  cesenatico_semifinale_A.score  cesenatico_semifinale_B.journal  cesenatico_semifinale_B.score  cesenatico_semifinale_C.journal  cesenatico_semifinale_C.score  cesenatico_semifinale_D.journal  cesenatico_semifinale_D.score  cesenatico_semifinale_E.journal  cesenatico_semifinale_E.score  cesenatico_semifinale_F.journal  cesenatico_semifinale_F.score  torino_pubblico.json  torino_pubblico.score
mathrace_interaction/data/2022/: cesenatico_finale.journal  cesenatico_finale.score  cesenatico_finale_femminile.journal  cesenatico_finale_femminile.score  cesenatico_pubblico.json  cesenatico_pubblico.score  (+50 more)
mathrace_interaction/docs/: api.rst  conf.py  index.rst
mathrace_interaction/mathrace_interaction/: __init__.py  determine_journal_version.py  journal_reader.py  journal_version_converter.py  journal_writer.py  list_journal_versions.py  live_journal_to_live_turing.py  live_turing_to_html.py  live_turing_to_live_journal.py
mathrace_interaction/tests/: README.md
(+232 files in other folders)
