[build-system]
requires = ["setuptools>=62", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mathrace-interaction"
version = "0.0.dev1"
authors = [
    {name = "Francesco Ballarin", email = "francesco.ballarin@unicatt.it"},
]
maintainers = [
    {name = "Francesco Ballarin", email = "francesco.ballarin@unicatt.it"},
]
description = "Interfacing mathrace and turing"
license = {text = "GNU Affero General Public License v3 or later (AGPLv3+)"}
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: POSIX",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = [
    "bs4",
    "jsondiff",
    "paramiko",
    "prettytable",
    "pytz",
    "requests",
    "selenium",
    "tinycss2"
]

[project.urls]
homepage = "https://github.com/dmf-unicatt/turing-dmf"
repository = "https://github.com/dmf-unicatt/turing-dmf"
issues = "https://github.com/dmf-unicatt/turing-dmf/issues"
funding = "https://github.com/sponsors/francesco-ballarin"

[project.optional-dependencies]
docs = [
    "sphinx"
]
lint = [
    "isort",
    "mypy",
    "ruff",
    "types-beautifulsoup4",
    "types-paramiko",
    "types-pytz",
    "types-requests",
    "yamllint"
]
tests = [
    "coverage[toml]",
    "mock-ssh-server @ git+https://github.com/carletes/mock-ssh-server.git",
    "pycryptodomex",
    "pytest",
    "pytest-django",
    "pytest_httpserver",
    "pytest-random-order",
    "simpleeval"
]

[tool.isort]
line_length = 120
multi_line_output = 4
order_by_type = false
use_parentheses = true

[tool.mypy]
check_untyped_defs = true
disallow_any_unimported = true
disallow_untyped_defs = true
implicit_reexport = true
no_implicit_optional = true
pretty = true
show_error_codes = true
strict = true
warn_return_any = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
    "django",
    "django.conf",
    "engine",
    "engine.models",
    "jsondiff",
    "simpleeval",
    "tinycss2",
    "Turing"
]
ignore_missing_imports = true

[tool.pytest.ini_options]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["ANN", "D", "E", "F", "FLY", "ICN", "N", "Q", "RUF", "UP", "W"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"mathrace_interaction/**/__init__.py" = ["F401"]

[tool.ruff.lint.pycodestyle]
max-doc-length = 120

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.setuptools.package-data]
mathrace_interaction = ["py.typed"]

[tool.setuptools.packages.find]
namespaces = false
